give a bigger heap to the forked JVMs as some tests from some plugins apparently need it.
Ideally this should be parameterized.